# plort

./: Cargo.toml  Justfile  TODO.md
src/: ascii.rs  config.rs  draw.rs  input.rs  main.rs  regression.rs  scale.rs  svg.rs  types.rs
src/draw/: mod.rs  svg.rs
src/draw/text/: ascii.rs  braille.rs  braille_point.rs  mod.rs
test_inputs/: circle.txt  exps.txt
tests/cmd/: ascii-output.md  circle.md  svg-output.md
