[package]
name = "plort"
description = "A simple command-line plotting tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
colored = "2.0.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
